Added fragment to gherkin tests that provides line numbers; added a comparator for sorting test cases by URI and line number. Added component tests and mild touch ups. Provided cleaner logic for enabling test filtering.